# mk8d-randomizer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  marioKartRandomizer-2dd9a746e80da9fe.js  marioKartRandomizer-2dd9a746e80da9fe_bg.wasm  mk8d_randomizer-2ea2ef1b302c2bad.js  mk8d_randomizer-2ea2ef1b302c2bad_bg.wasm  tailwind.config.js
.github/workflows/: pages.yml
assets/: sw.js
csv/: DRIVERS.csv  GLIDERS.csv  TIRES.csv  VEHICLES.csv
public/: tailwind.css
snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
src/: data.rs  items.rs  main.rs  maps.rs
