[package]
name = "mk8d_randomizer"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
dioxus = "0.3.0"
dioxus-web = "0.3.0"
fermi = "0.3.0"
wasm-bindgen = "=0.2.86"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
log = "0.4.6"
wasm-logger = "0.2.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
